# analytics-backup-python

./: .gitignore  Dockerfile  README.md  cfg.py  main.py  pyproject.toml
analytics/: cmd.py  csv.py  fetch.py  params.py  parse.py  service.py
analytics_backup_python/: HelloAnalytics.py
charts/analytics-backup/: Chart.yaml  values.yaml
charts/analytics-backup/templates/: _helpers.tpl  cronjob.yaml
tests/: test_analytics_backup_python.py
upload/: client.py  params.py
