[tool.poetry]
name = "analytics-backup-python"
version = "0.1.0"
description = ""
authors = ["Eric Hartline <eric.hartline@northwestern.edu>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.10.0"
oauth2client = "^4.1.3"
pandas = "^1.2.5"
minio = "^7.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
